--- a/index.html
+++ b/index.html
@@ -15,4 +15,11 @@
 <body style = "background: url(https://images.wallpaperscraft.com/image/single/cave_art_water_127094_2560x1440.jpg); background-size: cover; background-repeat: no-repeat"> 
   </body4>
   </center> 
+<style>
+  h1 {color: white}
+</style>
+    <style>
+  h2 {color: white}
+</style>
+    
 </html>
