--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        <h1>A dangerous path...</h1>
      </bold>
      <h2>
-       <a href="https://www.instagram.com/friskry/">
+       <a href="https://logosnumen.github.io/CAVERNFINAL/">
        how much further are you willing to go?
        </a>
      </h2>
